--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,8 @@
 name: weeeklyapp
 description: App for Weeekly
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -23,40 +11,48 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_widget_from_html: ^0.6.0-rc.2021031201
+  transparent_image: 2.0.0-nullsafety.0
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.8.0"
+  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.0.3
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "launch_icon.png"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+flutter_native_splash:
+  color: "#ff6600"
+  image: "splash.png"
+  web: false
 
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
     - assets/images/members/we-can/
     - assets/images/logo/
     - assets/images/home_buttons/
+    - assets/images/cover_art/
+    - assets/lyrics/we_are/
+    - assets/lyrics/we_can/
+    - assets/lyrics/we_play/
 
   fonts:
-    - family: Jua
+    - family: Vollkorn
       fonts:
-        - asset: fonts/Jua-Regular.ttf
+        - asset: fonts/Vollkorn.ttf
           style: normal
+        - asset: fonts/Vollkorn-Italic.ttf
+          style: italic
+        - asset: fonts/Vollkorn-Black.ttf
+          weight: 900
+        - asset: fonts/Vollkorn-BlackItalic.ttf
+          weight: 900
+          style: italic
