--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: App for Weeekly
 
 publish_to: 'none'
 
-version: 1.0.0+3
+version: 1.0.0+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -43,6 +43,7 @@ flutter:
     - assets/lyrics/we_are/
     - assets/lyrics/we_can/
     - assets/lyrics/we_play/
+    - assets/lyrics/boom_chi_ki/
 
   fonts:
     - family: Vollkorn
