(1.0.0+5) Update dependencies and splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: App for Weeekly
 
 publish_to: 'none'
 
-version: 1.0.0+4
+version: 1.0.0+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -12,7 +12,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_widget_from_html: ^0.6.0-rc.2021031201
-  transparent_image: 2.0.0-nullsafety.0
 
   cupertino_icons: ^1.0.2
 
@@ -20,7 +19,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^1.0.3
+  flutter_native_splash: ^1.1.5+1
 
 flutter_icons:
   android: "launcher_icon"
