--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: App for Weeekly
 
 publish_to: 'none'
 
-version: 1.0.0+6
+version: 1.0.0+7
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_widget_from_html: ^0.6.0-rc.2021031201
+  flutter_widget_from_html: ^0.6.0
 
   cupertino_icons: ^1.0.2
 
@@ -19,7 +19,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^1.1.5+1
+  flutter_native_splash: ^1.1.7+1
 
 flutter_icons:
   android: "launcher_icon"
@@ -37,7 +37,6 @@ flutter:
   assets:
     - assets/images/members/we-can/
     - assets/images/logo/
-    - assets/images/home_buttons/
     - assets/images/cover_art/
     - assets/lyrics/we_are/
     - assets/lyrics/we_can/
